--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-toastify": "^11.0.5",
     "tailwind-react-native-classnames": "^3.0.1",
     "timers": "^0.1.1",
     "zustand": "^5.0.5"
