--- a/eas.json
+++ b/eas.json
@@ -6,10 +6,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "BASE_URL": "https://impluse-backend.onrender.com"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "BASE_URL": "https://impluse-backend.onrender.com"
+      }
     },
     "production": {
       "autoIncrement": true,
@@ -18,6 +24,9 @@
       "android": {
         "buildType": "apk",
         "image": "latest"
+      },
+      "env": {
+        "BASE_URL": "https://impluse-backend.onrender.com"
       }
     }
   },
