fix: fixed routing issues

--- a/app.json
+++ b/app.json
@@ -47,7 +47,8 @@
       "expo-web-browser"
     ],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "tsconfigPaths": true
     },
     "extra": {
       "router": {},
